Refactor: 프로필 수정, 비밀번호 재발급 기능 응답 방식 변화
1.프로필 수정, pwd 재설정
-서비스단에서 Map으로 실행 결과를 반환하는 형식에서, 컨트롤러에서 일관된 ErrorResponse를 반환하는 형식으로 변환
2. 프로필 이미지 삭제 기능 추가
-프로필 이미지 변경이나 삭제시, 기존 서버의 이미지 파일도 삭제되도록

--- a/src/main/resources/static/css/member_info.css
+++ b/src/main/resources/static/css/member_info.css
@@ -123,26 +123,44 @@ hr{
 .info-container .info-content .edit-form .pf-input {
     margin: 10px;
 }
-.info-container .info-content .edit-form  .img-form {
+.info-container .info-content .edit-form .img-form {
     position: relative;
 }
 .info-container .info-content .edit-form .img-form .profile-img {
     display: inline-block;
 }
 
-.info-container .info-content .edit-form  .img-form .input-file-btn{
+.info-container .info-content .edit-form .img-form .input-file-btn{
     display: inline-block;
     position: absolute;
     top: 25px;
     left: 80px;
+    color: #ff9d0a;
+    text-decoration: underline;
+    cursor: pointer;
+    font-size: 15px;
+}
+
+.info-container .info-content .edit-form  .img-form .del-file-btn{
+    display: inline-block;
+    position: absolute;
+    top: 25px;
+    left: 160px;
     color: #999;
     text-decoration: underline;
     cursor: pointer;
     font-size: 15px;
 }
-.info-container .info-content .edit-form  .img-form .input-file-btn:hover, .input-file-btn:active{
-    color: #333;
+
+.info-container .info-content .edit-form  .img-form
+ .input-file-btn:hover, .input-file-btn:active{
+    color: #c97d08;
 }
+.info-container .info-content .edit-form  .img-form
+ .del-file-btn:hover, .del-file-btn:active{
+    color: #555;
+}
+
 .info-container .info-content .edit-form .pf-input .form-control {
     font-size: 15px;
 }
