--- a/src/main/resources/templates/fragments/myPage_nav.html
+++ b/src/main/resources/templates/fragments/myPage_nav.html
@@ -28,6 +28,11 @@
         </div>
         <div class="info-nav-btn">
             <p>&#183; &nbsp;</p>
+            <a th:href="@{/blocks/{memId}(memId=${session.loginMember.memId})}">
+                차단 목록 </a>
+        </div>
+        <div class="info-nav-btn">
+            <p>&#183; &nbsp;</p>
             <a th:href="@{/members/settings/profile}">
                 프로필 관리 </a>
         </div>
