--- a/src/main/resources/templates/member/resetPwdForm.html
+++ b/src/main/resources/templates/member/resetPwdForm.html
@@ -5,7 +5,7 @@
 
 <head layout:fragment="head">
   <meta charset="utf-8">
-  <link href="/css/signup.css" rel="stylesheet">
+  <link href="/css/join.css" rel="stylesheet">
   <style>
     .pwd-container {
       text-align: center;
