--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -39,7 +39,7 @@
             <div class="bottom-links">
               <a class="bottom-link">아이디 찾기</a><span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
               <a class="bottom-link" th:href="@{/members/pwd/reset}">비밀번호 재설정</a><span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
-              <a class="bottom-link" th:href="@{/members/signup}" >회원가입</a>
+              <a class="bottom-link" th:href="@{/members/join}" >회원가입</a>
             </div>
             <div class="bottom-login">
               <button class="btn-orange" type="submit">로그인</button>
