--- a/src/main/resources/templates/myPage/blockList.html
+++ b/src/main/resources/templates/myPage/blockList.html
@@ -39,7 +39,7 @@
                                    th:text="|${block.toMem.memId}|"> </a>
                             </div>
                         </div>
-                        <div class="align-middle col-sm-4 justify-content-center">
+                        <div class="align-middle col-sm-4 justify-content-start">
                             <button class="block-btn"
                                     th:data-toMemId="${block.toMem.memId}"
                                     th:onclick="cancelBlock(this.getAttribute('data-toMemId'))"
