Update: 간단한 코드 수정
-html : url 및 view 띄어쓰기 수정
-Block Entity: Db에 not null 조건 추가

--- a/src/main/resources/templates/review/reviewForm.html
+++ b/src/main/resources/templates/review/reviewForm.html
@@ -225,7 +225,7 @@
                 success: function (data) {
                     alert("리뷰가 등록되었습니다.");
                     let me =  [[${reviewForm.buyerId}]] ;
-                    window.location.href= `/members/${me}/trade/buyList`
+                    window.location.href= `/members/${me}/trade/buy-list`
                 },
                 error: function (err) {
                     console.log(err);
@@ -248,7 +248,7 @@
                 success: function (data) {
                     alert("리뷰가 등록되었습니다.");
                     let me =  [[${reviewForm.sellerId}]] ;
-                    window.location.href= `/members/${me}/trade/sellList`
+                    window.location.href= `/members/${me}/trade/sell-list`
                 },
                 error: function (err) {
                     console.log(err);
