Refactor: Review 기능 리팩토링
1. 기존에는 save()할 데이터로 정제하는 과정이 Controller에 존재 -> Service에서 process메서드를 추가해서 데이터 정제. (Controller에서는 검증 통과한 데이터만 AddReviewRequest 객체에 담아 전달)
2.web단에 ReviewResponse추가해 review를 일관되게 전달.

--- a/src/main/resources/templates/myPage/buyList.html
+++ b/src/main/resources/templates/myPage/buyList.html
@@ -37,10 +37,10 @@
                                     </div>
                                 </div>
                                 <div class="d-flex">
-                                    <span class="span-inner font-orange fw-bold" th:if="${buyOne.reviewSellerId == 0}"
+                                    <span class="span-inner font-orange fw-bold" th:if="${buyOne.reviewSellerId == null}"
                                           th:onclick="|location.href='@{/reviews/seller(postId=${buyOne.postDto.postId})}'|">
                                         리뷰 남기기</span>
-                                    <span class="span-inner" th:if="${buyOne.reviewSellerId != 0}"
+                                    <span class="span-inner" th:if="${buyOne.reviewSellerId != null}"
                                           th:onclick="|location.href='@{/reviews/seller/{reviewSellerId}(reviewSellerId=${buyOne.reviewSellerId})}'|">
                                         리뷰 보기</span>
                                 </div>
