Fix: SockJS를 배포 주소로 변경
localhost에서 배포 주소로

--- a/src/main/resources/templates/chat/chatTest.html
+++ b/src/main/resources/templates/chat/chatTest.html
@@ -32,7 +32,7 @@
 
     function connect2() {
         //StompConfig.java에 설정된 endpoint로 SockJS 객체, StompClient 객체 생성
-        var socket = new SockJS("http://localhost:8888/gs-guide-websocket");
+        var socket = new SockJS("http://15.164.25.45:8888/gs-guide-websocket");
         //do Handshake
         stompClient2 = Stomp.over(socket);
 
