--- a/src/main/resources/templates/chat/chatRoomListByPost.html
+++ b/src/main/resources/templates/chat/chatRoomListByPost.html
@@ -52,7 +52,7 @@
     console.log("script.....................");
     function connect4() {
         //StompConfig.java에 설정된 endpoint로 SockJS 객체, StompClient 객체 생성
-        var socket = new SockJS("http://localhost:8888/gs-guide-websocket");
+        var socket = new SockJS("http://15.164.25.45:8888/gs-guide-websocket");
         //do Handshake
         stompClient3 = Stomp.over(socket);
 
