--- a/src/main/resources/templates/myPage/sellList.html
+++ b/src/main/resources/templates/myPage/sellList.html
@@ -24,39 +24,75 @@
             <section id="sec_onSale" class="py-5" >
                 <h4>판매중</h4>
                 <div class="container px-3 mt-5">
-                    <div th:if="${onSaleAndRsv.isEmpty()}"><p class="fs-6 fw-normal text-secondary">판매중인 상품이 없습니다.</p></div>
-                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-3 justify-content-center">
-                    <div class="col mb-6" th:unless="${onSaleAndRsv.isEmpty()}" th:each = "post:${onSaleAndRsv}">
-                        <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${post.postId}|}'|" style="cursor: pointer;">
-                            <!-- 제품사진-->
-                            <img class="card-img-top" th:src="|/post/firstImg/${post.postId}|" alt="제품사진" />
-                            <!-- Product details-->
-                            <div class="card-body p-3">
-                                <div class="text-center">
-                                    <!-- 제목-->
-                                    <h5 class="fw-bolder text-truncate" th:text="${post.title}">제목</h5>
-                                    <!--지역, 시간-->
-                                    <h6 class="fs-7 fw-normal text-secondary">[[${post.loc.locName}]] ∙ [[${post.createdTime}]]</h6>
-                                    <!-- 가격-->
-                                    <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${#numbers.formatInteger(post.price, 0, 'COMMA')}원|">가격</h6>
-                                    <h6 class="fw-bolder" th:if="${post.price} == 0">가격없음</h6>
-
-                                    <!--예약중 배지-->
-                                    <span class="badge bg-success" th:if="${post.sellState.getSellStateName().equals('예약중')}">예약중</span>
+                    <div th:if="${onSaleAndRsvList.isEmpty()}"><p class="fs-6 fw-normal text-secondary">판매중인 상품이 없습니다.</p></div>
+                    <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-3 justify-content-center">
+                        <div class="col mb-6" th:unless="${onSaleAndRsvList.isEmpty()}" th:each = "post:${onSaleAndRsvList}">
+                            <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${post.postId}|}'|" style="cursor: pointer;">
+                                <!-- 제품사진-->
+                                <img class="card-img-top" th:src="|/post/firstImg/${post.postId}|" alt="제품사진" />
+                                <!-- Product details-->
+                                <div class="card-body p-3">
+                                    <div class="text-center">
+                                        <!-- 제목-->
+                                        <h5 class="fw-bolder text-truncate" th:text="${post.title}">제목</h5>
+                                        <!--지역, 시간-->
+                                        <h6 class="fs-7 fw-normal text-secondary">[[${post.loc.locName}]] ∙ [[${post.createdTime}]]</h6>
+                                        <!-- 가격-->
+                                        <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${#numbers.formatInteger(post.price, 0, 'COMMA')}원|">가격</h6>
+                                        <h6 class="fw-bolder" th:if="${post.price} == 0">가격없음</h6>
+                                        <!--예약중 배지-->
+                                        <span class="badge bg-success" th:if="${post.sellState.getSellStateName().equals('예약중')}">예약중</span>
+                                    </div>
                                 </div>
                             </div>
+                            <div class="d-flex">
+                                <span class="span-inner" th:if="${post.sellState.getSellStateName().equals('판매중')}" th:onclick="sellState([[${post.postId}]],'예약중')">예약중으로 변경</span>
+                                <span class="span-inner" th:if="${post.sellState.getSellStateName().equals('판매중')}" th:onclick="sellState([[${post.postId}]],'판매완료')">판매완료</span>
+                                <span class="span-inner" th:if="${post.sellState.getSellStateName().equals('예약중')}" th:onclick="sellState([[${post.postId}]],'판매중')">판매중으로 변경</span>
+                                <span class="span-inner" th:if="${post.sellState.getSellStateName().equals('예약중')}" th:onclick="sellState([[${post.postId}]],'판매완료')">판매완료</span>
+                            </div>
                         </div>
-                        <div class="d-flex">
-                            <span class="span-inner" th:if="${post.sellState.getSellStateName().equals('판매중')}" th:onclick="sellState([[${post.postId}]],'예약중')">예약중으로 변경</span>
-                            <span class="span-inner" th:if="${post.sellState.getSellStateName().equals('판매중')}" th:onclick="sellState([[${post.postId}]],'판매완료')">판매완료</span>
-
-                            <span class="span-inner" th:if="${post.sellState.getSellStateName().equals('예약중')}" th:onclick="sellState([[${post.postId}]],'판매중')">판매중으로 변경</span>
-                            <span class="span-inner" th:if="${post.sellState.getSellStateName().equals('예약중')}" th:onclick="sellState([[${post.postId}]],'판매완료')">판매완료</span>
-                        </div>
-
                     </div>
                 </div>
-            </div>
+                <!-- 페이징 -->
+                <div th:if="${!onSaleAndRsvList.isEmpty()}">
+                    <!-- 전역 변수 선언 -->
+                    <nav th:with="pageNumber = ${onSaleAndRsvList.pageable.pageNumber}, pageSize = ${onSaleAndRsvList.pageable.pageSize},
+                            totalPages = ${onSaleAndRsvList.totalPages}, startPage = ${T(java.lang.Math).floor(pageNumber / 10) * 10 + 1},
+                            tempEndPage = ${startPage + 10 - 1}, endPage = (${tempEndPage < totalPages ? tempEndPage : totalPages})"
+                         aria-label="Page navigation">
+                        <ul class="pagination">
+                            <!-- 처음으로 이동 -->
+                            <li th:classappend="${pageNumber +1 == 1} ? 'disabled'" class="page-item">
+                                <a class="page-link" th:href="@{/members/{memId}/trade/sell-list(memId=${session.loginMember.memId}, page=0, status='onSale')}">
+                                    <span>&laquo; </span>
+                                </a>
+                            </li>
+                            <!-- 이전으로 이동 -->
+                            <li th:classappend="${onSaleAndRsvList.first} ? 'disabled'" class="page-item">
+                                <a class="page-link" th:href="${onSaleAndRsvList.first} ? '#' : @{/members/{memId}/trade/sell-list(memId=${session.loginMember.memId}, page=${pageNumber - 1}, status='onSale')}" aria-label="Previous">
+                                    <span aria-hidden="true">&lt;</span>
+                                </a>
+                            </li>
+                            <!-- 특정 페이지로 이동 -->
+                            <li th:each="page: ${#numbers.sequence(startPage, endPage)}" th:classappend="${page == pageNumber + 1} ? 'active'" class="page-item">
+                                <a th:text="${page}" class="page-link" th:href="@{/members/{memId}/trade/sell-list(memId=${session.loginMember.memId}, page=${page - 1}, status='onSale')}"></a>
+                            </li>
+                            <!-- 다음으로 이동 -->
+                            <li th:classappend="${onSaleAndRsvList.last} ? 'disabled'" class="page-item">
+                                <a class="page-link" th:href="${onSaleAndRsvList.last} ? '#' : @{/members/{memId}/trade/sell-list(memId=${session.loginMember.memId}, page=${pageNumber + 1}, status='onSale')}" aria-label="Next">
+                                    <span aria-hidden="true">&gt;</span>
+                                </a>
+                            </li>
+                            <!-- 마지막으로 이동 -->
+                            <li th:classappend=" ${pageNumber +1 == totalPages} ? 'disabled'" class="page-item">
+                                <a class="page-link" th:href="@{/members/{memId}/trade/sell-list(memId=${session.loginMember.memId}, page=${totalPages - 1}, status='onSale')}">
+                                    <span>&raquo; </span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div> <!-- /페이징 -->
             </section>
 
             <section id="sec_sold" class="py-5">
@@ -90,18 +126,56 @@
                                       th:onclick="|location.href='@{/reviews/buyer/{reviewBuyerId}(reviewBuyerId=${soldPost.reviewBuyerId})}'|">
                                                 거래후기 보기</span>
                             </div>
-
                         </div>
                     </div>
                 </div>
+                <!-- 페이징 -->
+                <div th:if="${!soldList.isEmpty()}">
+                    <!-- 전역 변수 선언 -->
+                    <nav th:with="pageNumber = ${soldList.pageable.pageNumber}, pageSize = ${soldList.pageable.pageSize},
+                            totalPages = ${soldList.totalPages}, startPage = ${T(java.lang.Math).floor(pageNumber / 10) * 10 + 1},
+                            tempEndPage = ${startPage + 10 - 1}, endPage = (${tempEndPage < totalPages ? tempEndPage : totalPages})"
+                         aria-label="Page navigation">
+                        <ul class="pagination">
+                            <!-- 처음으로 이동 -->
+                            <li th:classappend="${pageNumber +1 == 1} ? 'disabled'" class="page-item">
+                                <a class="page-link" th:href="@{/members/{memId}/trade/sell-list(memId=${session.loginMember.memId}, page=0, status='sold')}">
+                                    <span>&laquo; </span>
+                                </a>
+                            </li>
+                            <!-- 이전으로 이동 -->
+                            <li th:classappend="${soldList.first} ? 'disabled'" class="page-item">
+                                <a class="page-link" th:href="${soldList.first} ? '#' : @{/members/{memId}/trade/sell-list(memId=${session.loginMember.memId}, page=${pageNumber - 1}, status='sold')}" aria-label="Previous">
+                                    <span aria-hidden="true">&lt;</span>
+                                </a>
+                            </li>
+                            <!-- 특정 페이지로 이동 -->
+                            <li th:each="page: ${#numbers.sequence(startPage, endPage)}" th:classappend="${page == pageNumber + 1} ? 'active'" class="page-item">
+                                <a th:text="${page}" class="page-link" th:href="@{/members/{memId}/trade/sell-list(memId=${session.loginMember.memId}, page=${page - 1}, status='sold')}"></a>
+                            </li>
+                            <!-- 다음으로 이동 -->
+                            <li th:classappend="${soldList.last} ? 'disabled'" class="page-item">
+                                <a class="page-link" th:href="${soldList.last} ? '#' : @{/members/{memId}/trade/sell-list(memId=${session.loginMember.memId}, page=${pageNumber + 1}, status='sold')}" aria-label="Next">
+                                    <span aria-hidden="true">&gt;</span>
+                                </a>
+                            </li>
+                            <!-- 마지막으로 이동 -->
+                            <li th:classappend=" ${pageNumber +1 == totalPages} ? 'disabled'" class="page-item">
+                                <a class="page-link" th:href="@{/members/{memId}/trade/sell-list(memId=${session.loginMember.memId}, page=${totalPages - 1}, status='sold')}">
+                                    <span>&raquo; </span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div> <!-- /페이징 -->
             </section>
 
             <section id="sec_hidden" class="py-5">
                 <h4>숨김</h4>
                 <div class="container px-3 mt-5">
-                    <div th:if="${hidePostList.isEmpty()}"><p class="fs-6 fw-normal text-secondary">숨긴 게시글이 없습니다.</p></div>
+                    <div th:if="${hideList.isEmpty()}"><p class="fs-6 fw-normal text-secondary">숨긴 게시글이 없습니다.</p></div>
                     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-3 justify-content-center">
-                        <div class="col mb-6" th:unless="${hidePostList.isEmpty()}" th:each = "hidePost:${hidePostList}">
+                        <div class="col mb-6" th:unless="${hideList.isEmpty()}" th:each = "hidePost:${hideList}">
                         <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${hidePost.postId}|}'|" style="cursor: pointer;">
                             <!-- 제품사진-->
                             <img class="card-img-top" th:src="|/post/firstImg/${hidePost.postId}|" alt="제품사진" />
@@ -127,6 +201,45 @@
                         </div>
                     </div>
                 </div>
+                <!-- 페이징 -->
+                <div th:if="${!hideList.isEmpty()}">
+                    <!-- 전역 변수 선언 -->
+                    <nav th:with="pageNumber = ${hideList.pageable.pageNumber}, pageSize = ${hideList.pageable.pageSize},
+                            totalPages = ${hideList.totalPages}, startPage = ${T(java.lang.Math).floor(pageNumber / 10) * 10 + 1},
+                            tempEndPage = ${startPage + 10 - 1}, endPage = (${tempEndPage < totalPages ? tempEndPage : totalPages})"
+                         aria-label="Page navigation">
+                        <ul class="pagination">
+                            <!-- 처음으로 이동 -->
+                            <li th:classappend="${pageNumber +1 == 1} ? 'disabled'" class="page-item">
+                                <a class="page-link" th:href="@{/members/{memId}/trade/sell-list(memId=${session.loginMember.memId}, page=0, status='hide')}">
+                                    <span>&laquo; </span>
+                                </a>
+                            </li>
+                            <!-- 이전으로 이동 -->
+                            <li th:classappend="${hideList.first} ? 'disabled'" class="page-item">
+                                <a class="page-link" th:href="${hideList.first} ? '#' : @{/members/{memId}/trade/sell-list(memId=${session.loginMember.memId}, page=${pageNumber - 1}, status='hide')}" aria-label="Previous">
+                                    <span aria-hidden="true">&lt;</span>
+                                </a>
+                            </li>
+                            <!-- 특정 페이지로 이동 -->
+                            <li th:each="page: ${#numbers.sequence(startPage, endPage)}" th:classappend="${page == pageNumber + 1} ? 'active'" class="page-item">
+                                <a th:text="${page}" class="page-link" th:href="@{/members/{memId}/trade/sell-list(memId=${session.loginMember.memId}, page=${page - 1}, status='hide')}"></a>
+                            </li>
+                            <!-- 다음으로 이동 -->
+                            <li th:classappend="${hideList.last} ? 'disabled'" class="page-item">
+                                <a class="page-link" th:href="${hideList.last} ? '#' : @{/members/{memId}/trade/sell-list(memId=${session.loginMember.memId}, page=${pageNumber + 1}, status='hide')}" aria-label="Next">
+                                    <span aria-hidden="true">&gt;</span>
+                                </a>
+                            </li>
+                            <!-- 마지막으로 이동 -->
+                            <li th:classappend=" ${pageNumber +1 == totalPages} ? 'disabled'" class="page-item">
+                                <a class="page-link" th:href="@{/members/{memId}/trade/sell-list(memId=${session.loginMember.memId}, page=${totalPages - 1}, status='hide')}">
+                                    <span>&raquo; </span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div> <!-- /페이징 -->
             </section>
         </div> <!--info content end-->
     </div> <!--container end-->
@@ -135,6 +248,17 @@
 
 <div layout:fragment="script" th:inline="javascript">
     <script th:inline="javascript">
+        $(document).ready(function(){
+            let status = [[${status}]];
+            if(status == 'onSale') {
+                onSaleFunc()
+            } else if(status == 'sold') {
+                soldFunc()
+            } else if (status == 'hide') {
+                hiddenFunc()
+            }
+        });
+
         $('#sec_sold').hide();
         $('#sec_hidden').hide();
         $('#sp_onSale').addClass('span-bottom');
@@ -146,7 +270,6 @@
             $('#sp_onSale').addClass('span-bottom');
             $('#sp_sold').removeClass('span-bottom');
             $('#sp_hidden').removeClass('span-bottom');
-
         }
         function soldFunc(){
             $('#sec_onSale').hide();
